# saucedemo-playwright-py

./: .gitignore  LICENSE  README.md  TESTING.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: playwright.yml
pages/: cart_page.py  checkout_complete_page.py  checkout_page.py  checkout_summary_page.py  inventory_page.py  login_page.py  product_page.py  sidebar.py
tests/: conftest.py  test_cart.py  test_checkout.py  test_checkout_summary.py  test_inventory.py  test_login.py  test_navigation.py  test_product.py  test_special_users.py
utils/: checkout_data.py  urls.py  users.py
